--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "devDependencies": {
     "enzyme": "^3.1.0",
     "react-scripts": "1.0.14",
-    "react-test-renderer": "^16.0.0"
+    "react-test-renderer": "^16.0.0",
+    "webpack": "^4.6.0"
   },
   "dependencies": {
     "enzyme-adapter-react-16": "^1.0.1",
+    "npm": "^5.8.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0"
   },
